# jsonc-daccord

./: .gitignore  CMakeLists.txt  LICENSE  README.md  jdac-cli.c  jsonc-daccord.pc.in
include/: internal.h  jdac_internal.h  jdac_optional.h  jsoncdaccord.h  optional.h
libjsoncdac/: CMakeLists.txt  additionalproperties.c  contains.c  dependent.c  download.c  jdac-cli.c  output.c  pattern.c  patternproperties.c  prefixitems.c  propertynames.c  ref.c  refdefs.c  regex_match.c  store.c  string-pattern.c  subschemalogic.c  validate.c
src/: CMakeLists.txt
src/include/: jsoncdaccord.h
src/libjsoncdac/: validate.c
src/tests/: test-flows.c
src/tests/json/: flows.json  test-enum.json  test-items.json  test-type.json  vectors-variants.json  vectors.json
src/tests/schema/: test-properties.json  test-reqs-recursively.json  vectors.json
tests/: CMakeLists.txt  common.h  test-dependent.c  test-flows.c  test-suite-side-tests.c  test-validate.c  test_runner.c
tests/json/: flows_with_err.json  side-test-pattern.json  side-test-patternProperties.json  test-anyof.json  test-dependent.json  test-maxmin-items.json  test-properties.json  test-reqs-recursively.json  test-required.json  test-type.json  test-uniqueitems.json  vectors2.json
tests/schema/: flows.json  side-test-pattern.json  side-test-patternProperties.json  test-anyof.json  test-dependent.json  test-enum.json  test-items.json  test-maxmin-items.json  test-properties.json  test-required.json  test-type.json  test-uniqueitems.json
